...
        android:layout_marginTop="16dp"
        app:layout_constraintWidth_percent="0.85" />

    <!-- Generate Unique QR Code Button -->
    <com.google.android.material.button.MaterialButton
        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
        android:id="@+id/generateQrCodeButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Generate Unique QR Code"
        android:textSize="15sp"
        android:textColor="@color/white"
        android:backgroundTint="@color/orange"
        app:layout_constraintTop_toBottomOf="@id/useOwnQrButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintWidth_percent="0.85" />

    <!-- Generate Promotion QR Code Button -->
    <com.google.android.material.button.MaterialButton
        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
        android:id="@+id/generatePromotionQrCodeButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Generate Promotion QR Code"
        android:textSize="15sp"
        android:textColor="@color/white"
        android:backgroundTint="@color/orange"
        app:layout_constraintTop_toBottomOf="@id/generateQrCodeButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
...
        app:layout_constraintWidth_percent="0.85" />

    <!-- Share QR Code Button -->

    <!-- Share QR Code Button -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/shareQrCodeButton"
        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Share QR Code"
        android:textSize="12sp"
        android:textColor="@color/white"
        android:backgroundTint="@color/orange"
        app:layout_constraintTop_toBottomOf="@id/generatePromotionQrCodeButton"
        app:layout_constraintStart_toStartOf="@id/useOwnQrButton"
        app:layout_constraintEnd_toStartOf="@id/sharePromoQrCodeButton"
...
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp" />

    <!-- Home Page Button -->
    <com.google.android.material.button.MaterialButton
        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
        android:id="@+id/finishButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Home Page"
        android:textSize="15sp"
        android:textColor="@color/white"
        android:backgroundTint="@color/orange"
        app:layout_constraintTop_toBottomOf="@id/shareQrCodeButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
...
